Fix navbar toggler and remove horizontal scrollbars

--- a/styles/home-styles.css
+++ b/styles/home-styles.css
@@ -14,7 +14,7 @@ main{
   position: relative;
   height: 250px;
   margin-bottom: 50px;
-  width: 100vw;
+  max-width: 100vw;
 }
 footer {
   clear: both;
