--- a/styles/nutrient-style.css
+++ b/styles/nutrient-style.css
@@ -1,4 +1,10 @@
-
+main{
+    max-width: 100vw;
+}
+.row{
+    max-width: 100vw; 
+    
+}
 @media(min-width:1301px){
     p,caption{
         font-size: 1.2vw;
